@@ -13,10 +13,11 @@ use POSIX;
 
 # common functions
 my $prefix="@prefix@";
-require "@datadir@/rdup/shared.pl" or die "** Require \`shared.pl' failed";
+require "@datadir@/rdup/shared.pl"; 
 
 my $progName = basename $0;
 my %opt;
+my $d = i18n();
 
 # add -k option, for key selection
 getopts('dhV', \%opt);
@@ -39,7 +40,7 @@ if (defined($ARGV[0])) {
 $crOptions .= "-q $default";
 
 my $tmpDir = tempdir("rdup.gpg.XXXXXX", TMPDIR => 1, CLEANUP => 1);
-die "** $tmpDir could not be created: $!" unless -d $tmpDir;
+die $d->get("** could not create:") . " $tmpDir: $!" unless -d $tmpDir;
 
 while (($_ = <STDIN>)) {
         chomp;
@@ -51,7 +52,7 @@ while (($_ = <STDIN>)) {
 
         my $path = "";
         read STDIN, $path, $psize;
-        die "** Empty path"  if ($path eq "");
+        die $d->get("** Empty path") if ($path eq "");
 
         if ($dump eq '+') {        # add
                 if ($type eq '-') {      # REG
